Small fix to spacing within movie cards

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -29,6 +29,13 @@
     width: 95%;
 }
 
+.ratingAndReviewStyle {
+    position: absolute;
+    bottom: 0.4vh;
+    left: 0.2vh;
+}
+
+
 .hoverStyle {
     z-index: 1;
     color: white;
@@ -60,4 +67,13 @@ select.form-control:focus {
 
 .addToListStyle {
     margin: 0.4vh;
+}
+
+/* Trending Page Title */
+.trendingTitle {
+    color: white;
+    margin: 1.2vh 3vh;
+    text-align: left;
+    border-bottom: 2px solid white;
+    display: inline-block;
 }
